<resources>
    <string name="app_name" translatable="false">StuDo</string>
    <string name="my_ads">My ads</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="resumes">Resumes</string>
    <string name="ads">Ads</string>
    <string name="account">Account</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="avatar">Avatar</string>
    <string name="email" translatable="false">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logo">logo</string>
    <string name="card_number">Card number</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create_account">Create account</string>
    <string name="change_email">Change email</string>
    <string name="change_password">Change password</string>
    <string name="log_out">Logout</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="wrong_password_error">Password must be at least 6 characters</string>
    <string name="equal_password_error">Passwords must be the same</string>
    <string name="same_password_error">New password can\'t match old password</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="reset_password">Reset password</string>
    <string name="ad">Ad</string>
    <string name="sample_text" translatable="false">Sample text</string>
    <string name="begin">"Begin: "</string>
    <string name="end">End:</string>
    <string name="resume">Resume</string>
    <string name="user_ads">User ads</string>
    <string name="user_resumes">User resumes</string>
    <string name="my_resumes">My resumes</string>
    <string name="create_ad">Create ad</string>
    <string name="edit_ad">Edit ad</string>
    <string name="create_resume">Create resume</string>
    <string name="edit_resume">Edit resume</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="short_description">Short description</string>
    <string name="ad_end_time">Event end:</string>
    <string name="edit">Edit</string>
    <string name="empty_field_error">Fill in the entry field</string>
    <string name="create_ad_success">Ad successfully created</string>
    <string name="create_resume_success">Resume successfully created</string>
    <string name="connection_with_server_error">No connection with server</string>
    <string name="edit_ad_success">Ad successfully edited</string>
    <string name="email_verification">Check your email to activate account</string>
    <string name="delete_ad_confirmation">Do you really want to delete an ad?</string>
    <string name="delete_resume_confirmation">Do you really want to delete a resume?</string>
    <string name="delete_ad_success">Ad successfully deleted</string>
    <string name="delete_resume_success">Resume successfully deleted</string>
    <string name="edit_resume_success">Resume successfully edited</string>
    <string name="old_email">Old email</string>
    <string name="new_email">New email</string>
    <string name="confirm_email">Confirm email</string>
    <string name="equal_email_error">Emails must be the same</string>
    <string name="same_email_error">New email can\'t match old email</string>
    <string name="wrong_email_error">Enter correct email address</string>
    <string name="new_email_verification">Check your new email to change it</string>
    <string name="changes_saved">Changes saved</string>
    <string name="dark_theme">Dark theme</string>
    <string name="organizations">Organizations</string>
    <string name="create_organization">Create organization</string>
    <string name="create_organization_success">Organization successfully created</string>
    <string name="edit_organization_success">Organization data successfully edited</string>
    <string name="delete_organization_success">Organization successfully deleted</string>
    <string name="delete_organization_confirmation">Do you really want to delete an organization?</string>
    <string name="edit_organization">Edit organization</string>
    <string name="organization">Organization</string>
    <string name="members">Members</string>
    <string name="error_code">"Error code: "</string>
    <string name="name_and_surname" translatable="false">%1$s %2$s</string>
    <string name="check_email_to_reset">Check your email to change password</string>
    <string name="comments">Comments</string>
    <string name="added_bookmarks">Added to bookmarks</string>
    <string name="removed_bookmarks">Removed to bookmarks</string>
    <string name="show_comments">Show comments</string>
    <string name="hide_comments">Hide comments</string>
    <string name="comment">Comment</string>
    <string name="create">Create</string>
    <string name="markdown_use_notification">You can use markdown for formatting</string>
    <string name="comment_created">Comment created</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_comment_confirmation">Are you want to delete this comment?</string>
</resources>
