<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <include layout="@layout/view_collapsing_toolbar"/>

    <android.support.v4.widget.NestedScrollView
            android:id="@+id/nsv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="fill_vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_marginBottom="?attr/actionBarSize">

        <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardCornerRadius="10dp"
                app:cardBackgroundColor="@android:color/white">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16dp"
                    android:orientation="vertical">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                    <ImageView
                            android:id="@+id/avatar"
                            android:layout_width="128dp"
                            android:layout_height="128dp"
                            android:src="@drawable/avatar"
                            android:contentDescription="@string/avatar"
                            android:layout_gravity="center"
                            android:transitionName="avatar_transition"/>

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_marginStart="8dp">

                        <android.support.design.widget.TextInputLayout
                                android:id="@+id/input_first_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">
                            <EditText
                                      android:layout_width="match_parent"
                                      android:layout_height="wrap_content"
                                      android:inputType="textCapWords|textPersonName"
                                      android:hint="@string/name"/>
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                                android:id="@+id/input_second_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">
                            <EditText
                                      android:layout_width="match_parent"
                                      android:layout_height="wrap_content"
                                      android:inputType="textCapWords|textPersonName"
                                      android:hint="@string/surname"/>
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                                android:id="@+id/input_card_number"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">
                            <EditText
                                      android:layout_width="match_parent"
                                      android:layout_height="wrap_content"
                                      android:inputType="phone|textPersonName"
                                      android:hint="@string/card_number"/>
                        </android.support.design.widget.TextInputLayout>

                    </LinearLayout>

                </LinearLayout>

                <Button
                        android:id="@+id/change_email_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/change_email"
                        android:layout_marginTop="8dp"/>

                <Button
                        android:id="@+id/change_password_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/change_password"/>

                <Button
                        android:id="@+id/log_out_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="38dp"
                        android:text="@string/log_out"
                        android:textColor="@android:color/holo_red_dark"
                        android:textColorHighlight="@android:color/holo_red_dark"
                        android:layout_gravity="center"
                        style="?android:attr/borderlessButtonStyle"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
            android:id="@+id/save_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            app:layout_anchor="@id/nsv"
            app:layout_anchorGravity="bottom|end"
            android:src="@drawable/ic_done_white_24dp"
            android:visibility="gone"/>

</android.support.design.widget.CoordinatorLayout>