<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <include layout="@layout/view_collapsing_toolbar"/>

    <android.support.v4.widget.NestedScrollView
            android:id="@+id/nsv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="fill_vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardCornerRadius="10dp"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textCapSentences"
                            android:hint="@string/title"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_short_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textMultiLine|textCapSentences"
                            android:lines="2"
                            android:hint="@string/short_description"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textMultiLine|textCapSentences"
                            android:lines="5"
                            android:hint="@string/description"/>
                </android.support.design.widget.TextInputLayout>

                <View
                        android:id="@+id/separator_1"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorLightGray"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"/>

                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:orientation="horizontal">

                    <TextView
                            android:id="@+id/end_time_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:textSize="16sp"
                            android:text="@string/ad_end_time"/>

                    <TextView
                            android:id="@+id/end_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@id/end_time_text"
                            android:layout_marginStart="4dp"
                            android:layout_centerVertical="true"
                            android:textSize="16sp"/>

                    <Button
                            android:id="@+id/edit_date_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="38dp"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            style="@style/Widget.AppCompat.Button.Borderless"
                            android:text="@string/edit"/>

                </RelativeLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
            android:id="@+id/delete_ad_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="88dp"
            app:layout_anchor="@id/nsv"
            app:layout_anchorGravity="bottom|end"
            android:src="@drawable/ic_delete_white_24dp"
            android:visibility="gone"/>

    <android.support.design.widget.FloatingActionButton
            android:id="@+id/save_ad_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            app:layout_anchor="@id/nsv"
            app:layout_anchorGravity="bottom|end"
            android:src="@drawable/ic_done_white_24dp"/>

</android.support.design.widget.CoordinatorLayout>